// Prisma Schema — Knowledge Feed Platform v2
// ERD-compliant: int PKs, Reaction unified, Domain/Hashtag normalized, Bookmark explicit

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================
// Core — User & Auth
// ============================================================

model User {
  id           Int     @id @default(autoincrement())
  username     String  @unique
  email        String? @unique
  passwordHash String  @map("password_hash")
  displayName  String  @map("display_name")
  bio          String?
  avatarUrl    String? @map("avatar_url")

  // app-specific (not in ERD, but needed)
  role         String   @default("USER") // USER | ADMIN
  readingLevel String   @default("intermediate") @map("reading_level")
  emailVerified Boolean @default(false) @map("email_verified")
  isActive      Boolean @default(true)  @map("is_active")
  lastLoginAt   DateTime? @map("last_login_at")
  deletedAt     DateTime? @map("deleted_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // relations
  sessions        Session[]
  followedDomains UserFollowDomain[]
  reactions       Reaction[]
  reposts         Repost[]
  bookmarks       Bookmark[]
  followers       Follow[]           @relation("Following")
  following       Follow[]           @relation("Follower")
  postViews       PostView[]
  comments        Comment[]
  reportsFiled    Report[]           @relation("Reporter")
  reportsResolved Report[]           @relation("Resolver")
  mentions        Mention[]

  @@map("users")
}

model Session {
  id           String   @id @default(cuid())
  userId       Int      @map("user_id")
  refreshToken String   @unique @map("refresh_token")
  deviceInfo   String?  @map("device_info")
  ipAddress    String?  @map("ip_address")
  expiresAt    DateTime @map("expires_at")
  isRevoked    Boolean  @default(false) @map("is_revoked")
  createdAt    DateTime @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

// ============================================================
// Knowledge & Domains
// ============================================================

model Domain {
  id             Int      @id @default(autoincrement())
  name           String   @unique
  parentDomainId String?  @unique @map("parent_domain_id")
  createdAt      DateTime @default(now()) @map("created_at")

  followedBy UserFollowDomain[]
  posts      KnowledgeCard[]

  @@map("domains")
}

model Hashtag {
  id             Int      @id @default(autoincrement())
  name           String   @unique
  parentDomainId String   @map("parent_domain_id")
  createdAt      DateTime @default(now()) @map("created_at")

  posts PostHashtag[]

  @@map("hashtags")
}

model PostHashtag {
  postId Int @map("post_id")
  tagId  Int @map("tag_id")

  post KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)
  tag  Hashtag       @relation(fields: [tagId], references: [id], onDelete: Cascade)

  @@id([postId, tagId])
  @@map("post_hashtags")
}

model UserFollowDomain {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  domainId  Int      @map("domain_id")
  createdAt DateTime @default(now()) @map("created_at")

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  domain Domain @relation(fields: [domainId], references: [id], onDelete: Cascade)

  @@unique([userId, domainId])
  @@map("user_follow_domains")
}

model KnowledgeCard {
  id      Int    @id @default(autoincrement())
  title   String
  content String
  type    String @default("QUICK_FACT")

  domainId Int @map("domain_id")

  sourceUrl  String? @map("source_url")
  sourceName String? @map("source_name")

  aiModel     String?  @map("ai_model")
  generatedAt DateTime @default(now()) @map("generated_at")

  // denormalized counters
  viewCount       Int   @default(0) @map("view_count")
  saveCount       Int   @default(0) @map("save_count")
  shareCount      Int   @default(0) @map("share_count")
  repostCount     Int   @default(0) @map("repost_count")
  engagementScore Float @default(0) @map("engagement_score")

  // moderation
  isPublished      Boolean @default(true) @map("is_published")
  factChecked      Boolean @default(false) @map("fact_checked")
  factCheckScore   Float?  @map("fact_check_score")
  moderationStatus String  @default("pending") @map("moderation_status")

  // RAG
  sourceChunkIds String[] @map("source_chunk_ids")
  sourceData     Json?    @map("source_data")
  citations      Json?

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // relations
  domain               Domain                @relation(fields: [domainId], references: [id])
  hashtags             PostHashtag[]
  reactions            Reaction[]
  reposts              Repost[]
  bookmarks            Bookmark[]
  postViews            PostView[]
  comments             Comment[]
  reports              Report[]
  factCheckResults     FactCheckResult[]
  contentVerifications ContentVerification[]

  @@index([domainId, createdAt(sort: Desc)], map: "idx_knowledge_cards_domain_created")
  @@index([createdAt, engagementScore(sort: Desc)], map: "idx_knowledge_cards_created_engagement")
  @@index([moderationStatus])
  @@map("knowledge_cards")
}

// ============================================================
// Social Interactions
// ============================================================

enum ReactionType {
  LIKE
  DISLIKE
}

enum VerificationStatus {
  verified
  unverified
  disputed
}

enum ReportStatus {
  pending
  reviewed
  resolved
}

model Reaction {
  id           Int          @id @default(autoincrement())
  userId       Int          @map("user_id")
  postId       Int          @map("post_id")
  reactionType ReactionType @map("reaction_type")
  createdAt    DateTime     @default(now()) @map("created_at")

  user User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  post KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@unique([userId, postId, reactionType])
  @@index([postId, reactionType])
  @@map("reactions")
}

model Repost {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  postId    Int      @map("post_id")
  createdAt DateTime @default(now()) @map("created_at")

  user User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  post KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@unique([userId, postId])
  @@map("reposts")
}

model Bookmark {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  postId    Int      @map("post_id")
  createdAt DateTime @default(now()) @map("created_at")

  user User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  post KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@unique([userId, postId])
  @@map("bookmarks")
}

model Follow {
  id          Int      @id @default(autoincrement())
  followerId  Int      @map("follower_id")
  followingId Int      @map("following_id")
  createdAt   DateTime @default(now()) @map("created_at")

  follower  User @relation("Follower", fields: [followerId], references: [id], onDelete: Cascade)
  following User @relation("Following", fields: [followingId], references: [id], onDelete: Cascade)

  @@unique([followerId, followingId])
  @@map("follows")
}

model Mention {
  id              Int @id @default(autoincrement())
  commentId       Int @map("comment_id")
  mentionedUserId Int @map("mentioned_user_id")

  comment       Comment @relation(fields: [commentId], references: [id], onDelete: Cascade)
  mentionedUser User    @relation(fields: [mentionedUserId], references: [id], onDelete: Cascade)

  @@unique([commentId, mentionedUserId])
  @@map("mentions")
}

// ============================================================
// Comments & Views
// ============================================================

model Comment {
  id        Int      @id @default(autoincrement())
  content   String
  userId    Int      @map("user_id")
  postId    Int      @map("post_id")
  parentId  Int?     @map("parent_id")
  isDeleted Boolean  @default(false) @map("is_deleted")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user     User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  post     KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)
  parent   Comment?      @relation("CommentReplies", fields: [parentId], references: [id], onDelete: Cascade)
  replies  Comment[]     @relation("CommentReplies")
  mentions Mention[]
  reports  Report[]

  @@index([postId], map: "idx_comments_post_id")
  @@map("comments")
}

model PostView {
  id       Int      @id @default(autoincrement())
  userId   Int?     @map("user_id")
  postId   Int      @map("post_id")
  viewedAt DateTime @default(now()) @map("viewed_at")

  user User?         @relation(fields: [userId], references: [id], onDelete: Cascade)
  post KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@unique([userId, postId])
  @@index([postId], map: "idx_post_views_post_id")
  @@index([userId], map: "idx_post_views_user_id")
  @@map("post_views")
}

// ============================================================
// Verification & Moderation
// ============================================================

model ContentVerification {
  id          Int      @id @default(autoincrement())
  postId      Int      @map("post_id")
  sourceName  String?  @map("source_name")
  sourceUrl   String?  @map("source_url")
  factChecker String?  @map("fact_checker")
  status      VerificationStatus @default(unverified)
  checkedAt   DateTime @default(now()) @map("checked_at")

  post KnowledgeCard @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@map("content_verifications")
}

model Report {
  id                Int       @id @default(autoincrement())
  reporterUserId    Int       @map("reporter_user_id")
  reportedPostId    Int?      @map("reported_post_id")
  reportedCommentId Int?      @map("reported_comment_id")
  reason            String
  description       String?
  status            ReportStatus @default(pending)
  createdAt         DateTime  @default(now()) @map("created_at")
  resolvedAt        DateTime? @map("resolved_at")
  resolvedByUserId  Int?      @map("resolved_by_user_id")

  reporter        User           @relation("Reporter", fields: [reporterUserId], references: [id], onDelete: Cascade)
  reportedPost    KnowledgeCard? @relation(fields: [reportedPostId], references: [id], onDelete: Cascade)
  reportedComment Comment?       @relation(fields: [reportedCommentId], references: [id], onDelete: Cascade)
  resolver        User?          @relation("Resolver", fields: [resolvedByUserId], references: [id])

  @@index([createdAt])
  @@index([status])
  @@map("reports")
}

// ============================================================
// RAG Pipeline (unchanged from v1, int PKs added)
// ============================================================

model KnowledgeSource {
  id             Int       @id @default(autoincrement())
  externalId     String    @unique @map("external_id")
  sourceType     String    @map("source_type")
  title          String
  authors        String[]
  abstract       String?
  url            String?
  pdfUrl         String?   @map("pdf_url")
  category       String?
  publishedDate  DateTime? @map("published_date")
  contentHash    String?   @map("content_hash")
  rawContent     String?   @map("raw_content")
  cleanedContent String?   @map("cleaned_content")
  status         String    @default("fetched")
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")

  chunks DocumentChunk[]

  @@map("knowledge_sources")
}

model DocumentChunk {
  id         Int      @id @default(autoincrement())
  sourceId   Int      @map("source_id")
  chunkIndex Int      @map("chunk_index")
  content    String
  startChar  Int      @map("start_char")
  endChar    Int      @map("end_char")
  tokenCount Int?     @map("token_count")
  embedded   Boolean  @default(false)
  createdAt  DateTime @default(now()) @map("created_at")

  source KnowledgeSource @relation(fields: [sourceId], references: [id], onDelete: Cascade)

  @@unique([sourceId, chunkIndex])
  @@map("document_chunks")
}

model FactCheckResult {
  id          String   @id @default(cuid())
  cardId      Int      @map("card_id")
  claim       String
  verified    Boolean  @default(false)
  confidence  Float    @default(0)
  sourceType  String   @map("source_type")
  sourceUrl   String?  @map("source_url")
  sourceTitle String?  @map("source_title")
  details     Json?
  createdAt   DateTime @default(now()) @map("created_at")

  card KnowledgeCard @relation(fields: [cardId], references: [id], onDelete: Cascade)

  @@map("fact_check_results")
}

model PipelineJob {
  id          String    @id @default(cuid())
  bullmqJobId String?   @unique @map("bullmq_job_id")
  type        String
  status      String    @default("queued")
  input       Json?
  output      Json?
  error       String?
  currentStep String?   @map("current_step")
  progress    Int       @default(0)
  startedAt   DateTime? @map("started_at")
  completedAt DateTime? @map("completed_at")
  createdAt   DateTime  @default(now()) @map("created_at")

  @@map("pipeline_jobs")
}
